--- a/front/FreemanBlog/index.html
+++ b/front/FreemanBlog/index.html
@@ -3,14 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>freemanblog</title>
+    <title>郑景深的博客</title>
   </head>
-  <style>
-    body{
-      margin: 0;
-      padding: 0;
-    }
-  </style>
 
   <body>
     <div id="app"></div>
